fixed cell overlaps in details views, KRONOS-47.

--- a/apps/core/static/core/style.css
+++ b/apps/core/static/core/style.css
@@ -1,7 +1,3 @@
-#grey_background {
-    background-color: #F5F5F5;
-}
-
 .header {
     background-color:#424242;
 }
@@ -51,11 +47,23 @@ h4 {
 }
 
 legend {
-    color:#5D4037;
+    color: #5D4037;
 }
 
 td, th {
     padding:4px;
+}
+
+#thid {
+    padding: 0px;
+    /*padding-right: 25px;*/
+    width: 30%;
+}
+
+#tdid {
+    padding: 0px;
+    padding-left: 10px;
+    width: 70%;
 }
 
 a:hover {
